--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <div class="One">
                     <h2 id="About me" class="h2">Обо мне</h2>
-                    <p class="info">31 год, живу в Санкт-Петербурге, работал Водителем-курьером, сломал руку и решил обучаться в сфере IT</p>
+                    <p class="info">31 год, живу в Санкт-Петербурге, работаю Администратором в Достаевском, сломал руку и решил обучаться в сфере IT</p>
                 </div>
 
                 <div class="Two">
